--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -26,7 +26,9 @@
   background-color: var(--accent-color) !important;
   height: 20px;
   display:flex;
-  align-items: center; 
+  align-items: center;
+  margin-left: -2px;
+  margin-right: -2px;
 }
 
 .resume-progress-none {
